--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,12 @@
 		<version>2.1.2.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
+	
 	<groupId>com.danielbispo.cursomc</groupId>
 	<artifactId>cursomc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packing>jar</packing>
+	
 	<name>cursomc</name>
 	<description>Estudo de caso - Modelagem Conceitual UML</description>
 
