--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=mysql://bde762c61ef410:20ec806f@us-cdbr-iron-east-03.cleardb.net/heroku_8cce7b3ee47e068?reconnect=true
+spring.datasource.url=
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
