--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=
+spring.datasource.url=mysql://bde762c61ef410:20ec806f@us-cdbr-iron-east-03.cleardb.net/heroku_8cce7b3ee47e068?reconnect=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
